cmake_minimum_required(VERSION 3.20)
project(CatLog)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(src)
include_directories(third_party/leveldb/build)
include_directories(third_party/leveldb/build/include)
include_directories(third_party/leveldb/build/include/port)
include_directories(third_party/leveldb/db)
include_directories(third_party/leveldb/helpers/memenv)
include_directories(third_party/leveldb/include)
include_directories(third_party/leveldb/include/leveldb)
include_directories(third_party/leveldb/port)
include_directories(third_party/leveldb/table)
include_directories(third_party/leveldb/third_party/benchmark/include)
include_directories(third_party/leveldb/third_party/benchmark/include/benchmark)
include_directories(third_party/leveldb/third_party/benchmark/src)
include_directories(third_party/leveldb/third_party/benchmark/test)
include_directories(third_party/leveldb/third_party/googletest/googlemock/include)
include_directories(third_party/leveldb/third_party/googletest/googlemock/include/gmock)
include_directories(third_party/leveldb/third_party/googletest/googlemock/include/gmock/internal)
include_directories(third_party/leveldb/third_party/googletest/googlemock/include/gmock/internal/custom)
include_directories(third_party/leveldb/third_party/googletest/googlemock/test)
include_directories(third_party/leveldb/third_party/googletest/googletest/include)
include_directories(third_party/leveldb/third_party/googletest/googletest/include/gtest)
include_directories(third_party/leveldb/third_party/googletest/googletest/include/gtest/internal)
include_directories(third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/custom)
include_directories(third_party/leveldb/third_party/googletest/googletest/samples)
include_directories(third_party/leveldb/third_party/googletest/googletest/src)
include_directories(third_party/leveldb/third_party/googletest/googletest/test)
include_directories(third_party/leveldb/util)

add_executable(CatLog
        include/CatLog.cpp
        src/Log.h
        test/leveldb_test.cpp
        third_party/leveldb/benchmarks/db_bench.cc
        third_party/leveldb/benchmarks/db_bench_log.cc
        third_party/leveldb/benchmarks/db_bench_sqlite3.cc
        third_party/leveldb/benchmarks/db_bench_tree_db.cc
        third_party/leveldb/build/include/port/port_config.h
        third_party/leveldb/db/autocompact_test.cc
        third_party/leveldb/db/builder.cc
        third_party/leveldb/db/builder.h
        third_party/leveldb/db/c.cc
        third_party/leveldb/db/c_test.c
        third_party/leveldb/db/corruption_test.cc
        third_party/leveldb/db/db_impl.cc
        third_party/leveldb/db/db_impl.h
        third_party/leveldb/db/db_iter.cc
        third_party/leveldb/db/db_iter.h
        third_party/leveldb/db/db_test.cc
        third_party/leveldb/db/dbformat.cc
        third_party/leveldb/db/dbformat.h
        third_party/leveldb/db/dbformat_test.cc
        third_party/leveldb/db/dumpfile.cc
        third_party/leveldb/db/fault_injection_test.cc
        third_party/leveldb/db/filename.cc
        third_party/leveldb/db/filename.h
        third_party/leveldb/db/filename_test.cc
        third_party/leveldb/db/leveldbutil.cc
        third_party/leveldb/db/log_format.h
        third_party/leveldb/db/log_reader.cc
        third_party/leveldb/db/log_reader.h
        third_party/leveldb/db/log_test.cc
        third_party/leveldb/db/log_writer.cc
        third_party/leveldb/db/log_writer.h
        third_party/leveldb/db/memtable.cc
        third_party/leveldb/db/memtable.h
        third_party/leveldb/db/recovery_test.cc
        third_party/leveldb/db/repair.cc
        third_party/leveldb/db/skiplist.h
        third_party/leveldb/db/skiplist_test.cc
        third_party/leveldb/db/snapshot.h
        third_party/leveldb/db/table_cache.cc
        third_party/leveldb/db/table_cache.h
        third_party/leveldb/db/version_edit.cc
        third_party/leveldb/db/version_edit.h
        third_party/leveldb/db/version_edit_test.cc
        third_party/leveldb/db/version_set.cc
        third_party/leveldb/db/version_set.h
        third_party/leveldb/db/version_set_test.cc
        third_party/leveldb/db/write_batch.cc
        third_party/leveldb/db/write_batch_internal.h
        third_party/leveldb/db/write_batch_test.cc
        third_party/leveldb/helpers/memenv/memenv.cc
        third_party/leveldb/helpers/memenv/memenv.h
        third_party/leveldb/helpers/memenv/memenv_test.cc
        third_party/leveldb/include/leveldb/c.h
        third_party/leveldb/include/leveldb/cache.h
        third_party/leveldb/include/leveldb/comparator.h
        third_party/leveldb/include/leveldb/db.h
        third_party/leveldb/include/leveldb/dumpfile.h
        third_party/leveldb/include/leveldb/env.h
        third_party/leveldb/include/leveldb/export.h
        third_party/leveldb/include/leveldb/filter_policy.h
        third_party/leveldb/include/leveldb/iterator.h
        third_party/leveldb/include/leveldb/options.h
        third_party/leveldb/include/leveldb/slice.h
        third_party/leveldb/include/leveldb/status.h
        third_party/leveldb/include/leveldb/table.h
        third_party/leveldb/include/leveldb/table_builder.h
        third_party/leveldb/include/leveldb/write_batch.h
        third_party/leveldb/issues/issue178_test.cc
        third_party/leveldb/issues/issue200_test.cc
        third_party/leveldb/issues/issue320_test.cc
        third_party/leveldb/port/port.h
        third_party/leveldb/port/port_example.h
        third_party/leveldb/port/port_stdcxx.h
        third_party/leveldb/port/thread_annotations.h
        third_party/leveldb/table/block.cc
        third_party/leveldb/table/block.h
        third_party/leveldb/table/block_builder.cc
        third_party/leveldb/table/block_builder.h
        third_party/leveldb/table/filter_block.cc
        third_party/leveldb/table/filter_block.h
        third_party/leveldb/table/filter_block_test.cc
        third_party/leveldb/table/format.cc
        third_party/leveldb/table/format.h
        third_party/leveldb/table/iterator.cc
        third_party/leveldb/table/iterator_wrapper.h
        third_party/leveldb/table/merger.cc
        third_party/leveldb/table/merger.h
        third_party/leveldb/table/table.cc
        third_party/leveldb/table/table_builder.cc
        third_party/leveldb/table/table_test.cc
        third_party/leveldb/table/two_level_iterator.cc
        third_party/leveldb/table/two_level_iterator.h
        third_party/leveldb/third_party/benchmark/bindings/python/google_benchmark/benchmark.cc
        third_party/leveldb/third_party/benchmark/cmake/gnu_posix_regex.cpp
        third_party/leveldb/third_party/benchmark/cmake/posix_regex.cpp
        third_party/leveldb/third_party/benchmark/cmake/std_regex.cpp
        third_party/leveldb/third_party/benchmark/cmake/steady_clock.cpp
        third_party/leveldb/third_party/benchmark/cmake/thread_safety_attributes.cpp
        third_party/leveldb/third_party/benchmark/include/benchmark/benchmark.h
        third_party/leveldb/third_party/benchmark/src/arraysize.h
        third_party/leveldb/third_party/benchmark/src/benchmark.cc
        third_party/leveldb/third_party/benchmark/src/benchmark_api_internal.cc
        third_party/leveldb/third_party/benchmark/src/benchmark_api_internal.h
        third_party/leveldb/third_party/benchmark/src/benchmark_main.cc
        third_party/leveldb/third_party/benchmark/src/benchmark_name.cc
        third_party/leveldb/third_party/benchmark/src/benchmark_register.cc
        third_party/leveldb/third_party/benchmark/src/benchmark_register.h
        third_party/leveldb/third_party/benchmark/src/benchmark_runner.cc
        third_party/leveldb/third_party/benchmark/src/benchmark_runner.h
        third_party/leveldb/third_party/benchmark/src/check.h
        third_party/leveldb/third_party/benchmark/src/colorprint.cc
        third_party/leveldb/third_party/benchmark/src/colorprint.h
        third_party/leveldb/third_party/benchmark/src/commandlineflags.cc
        third_party/leveldb/third_party/benchmark/src/commandlineflags.h
        third_party/leveldb/third_party/benchmark/src/complexity.cc
        third_party/leveldb/third_party/benchmark/src/complexity.h
        third_party/leveldb/third_party/benchmark/src/console_reporter.cc
        third_party/leveldb/third_party/benchmark/src/counter.cc
        third_party/leveldb/third_party/benchmark/src/counter.h
        third_party/leveldb/third_party/benchmark/src/csv_reporter.cc
        third_party/leveldb/third_party/benchmark/src/cycleclock.h
        third_party/leveldb/third_party/benchmark/src/internal_macros.h
        third_party/leveldb/third_party/benchmark/src/json_reporter.cc
        third_party/leveldb/third_party/benchmark/src/log.h
        third_party/leveldb/third_party/benchmark/src/mutex.h
        third_party/leveldb/third_party/benchmark/src/perf_counters.cc
        third_party/leveldb/third_party/benchmark/src/perf_counters.h
        third_party/leveldb/third_party/benchmark/src/re.h
        third_party/leveldb/third_party/benchmark/src/reporter.cc
        third_party/leveldb/third_party/benchmark/src/sleep.cc
        third_party/leveldb/third_party/benchmark/src/sleep.h
        third_party/leveldb/third_party/benchmark/src/statistics.cc
        third_party/leveldb/third_party/benchmark/src/statistics.h
        third_party/leveldb/third_party/benchmark/src/string_util.cc
        third_party/leveldb/third_party/benchmark/src/string_util.h
        third_party/leveldb/third_party/benchmark/src/sysinfo.cc
        third_party/leveldb/third_party/benchmark/src/thread_manager.h
        third_party/leveldb/third_party/benchmark/src/thread_timer.h
        third_party/leveldb/third_party/benchmark/src/timers.cc
        third_party/leveldb/third_party/benchmark/src/timers.h
        third_party/leveldb/third_party/benchmark/test/args_product_test.cc
        third_party/leveldb/third_party/benchmark/test/basic_test.cc
        third_party/leveldb/third_party/benchmark/test/benchmark_gtest.cc
        third_party/leveldb/third_party/benchmark/test/benchmark_name_gtest.cc
        third_party/leveldb/third_party/benchmark/test/benchmark_test.cc
        third_party/leveldb/third_party/benchmark/test/clobber_memory_assembly_test.cc
        third_party/leveldb/third_party/benchmark/test/commandlineflags_gtest.cc
        third_party/leveldb/third_party/benchmark/test/complexity_test.cc
        third_party/leveldb/third_party/benchmark/test/cxx03_test.cc
        third_party/leveldb/third_party/benchmark/test/diagnostics_test.cc
        third_party/leveldb/third_party/benchmark/test/display_aggregates_only_test.cc
        third_party/leveldb/third_party/benchmark/test/donotoptimize_assembly_test.cc
        third_party/leveldb/third_party/benchmark/test/donotoptimize_test.cc
        third_party/leveldb/third_party/benchmark/test/filter_test.cc
        third_party/leveldb/third_party/benchmark/test/fixture_test.cc
        third_party/leveldb/third_party/benchmark/test/internal_threading_test.cc
        third_party/leveldb/third_party/benchmark/test/link_main_test.cc
        third_party/leveldb/third_party/benchmark/test/map_test.cc
        third_party/leveldb/third_party/benchmark/test/memory_manager_test.cc
        third_party/leveldb/third_party/benchmark/test/multiple_ranges_test.cc
        third_party/leveldb/third_party/benchmark/test/options_test.cc
        third_party/leveldb/third_party/benchmark/test/output_test.h
        third_party/leveldb/third_party/benchmark/test/output_test_helper.cc
        third_party/leveldb/third_party/benchmark/test/perf_counters_gtest.cc
        third_party/leveldb/third_party/benchmark/test/perf_counters_test.cc
        third_party/leveldb/third_party/benchmark/test/register_benchmark_test.cc
        third_party/leveldb/third_party/benchmark/test/report_aggregates_only_test.cc
        third_party/leveldb/third_party/benchmark/test/reporter_output_test.cc
        third_party/leveldb/third_party/benchmark/test/skip_with_error_test.cc
        third_party/leveldb/third_party/benchmark/test/state_assembly_test.cc
        third_party/leveldb/third_party/benchmark/test/statistics_gtest.cc
        third_party/leveldb/third_party/benchmark/test/string_util_gtest.cc
        third_party/leveldb/third_party/benchmark/test/templated_fixture_test.cc
        third_party/leveldb/third_party/benchmark/test/user_counters_tabular_test.cc
        third_party/leveldb/third_party/benchmark/test/user_counters_test.cc
        third_party/leveldb/third_party/benchmark/test/user_counters_thousands_test.cc
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/internal/custom/gmock-matchers.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/internal/custom/gmock-port.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/internal/gmock-internal-utils.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/internal/gmock-port.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/internal/gmock-pp.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock-actions.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock-cardinalities.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock-function-mocker.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock-matchers.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock-more-actions.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock-more-matchers.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock-nice-strict.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock-spec-builders.h
        third_party/leveldb/third_party/googletest/googlemock/include/gmock/gmock.h
        third_party/leveldb/third_party/googletest/googlemock/src/gmock-all.cc
        third_party/leveldb/third_party/googletest/googlemock/src/gmock-cardinalities.cc
        third_party/leveldb/third_party/googletest/googlemock/src/gmock-internal-utils.cc
        third_party/leveldb/third_party/googletest/googlemock/src/gmock-matchers.cc
        third_party/leveldb/third_party/googletest/googlemock/src/gmock-spec-builders.cc
        third_party/leveldb/third_party/googletest/googlemock/src/gmock.cc
        third_party/leveldb/third_party/googletest/googlemock/src/gmock_main.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-actions_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-cardinalities_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-function-mocker_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-internal-utils_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-matchers_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-more-actions_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-nice-strict_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-port_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-pp-string_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-pp_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock-spec-builders_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_all_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_ex_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_leak_test_.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_link2_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_link_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_link_test.h
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_output_test_.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_stress_test.cc
        third_party/leveldb/third_party/googletest/googlemock/test/gmock_test.cc
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/custom/gtest-port.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/custom/gtest-printers.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/custom/gtest.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/gtest-death-test-internal.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/gtest-filepath.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/gtest-internal.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/gtest-param-util.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/gtest-port-arch.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/gtest-port.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/gtest-string.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/internal/gtest-type-util.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest-death-test.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest-matchers.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest-message.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest-param-test.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest-printers.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest-spi.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest-test-part.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest-typed-test.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h
        third_party/leveldb/third_party/googletest/googletest/include/gtest/gtest_prod.h
        third_party/leveldb/third_party/googletest/googletest/samples/prime_tables.h
        third_party/leveldb/third_party/googletest/googletest/samples/sample1.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample1.h
        third_party/leveldb/third_party/googletest/googletest/samples/sample10_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample1_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample2.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample2.h
        third_party/leveldb/third_party/googletest/googletest/samples/sample2_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample3-inl.h
        third_party/leveldb/third_party/googletest/googletest/samples/sample3_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample4.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample4.h
        third_party/leveldb/third_party/googletest/googletest/samples/sample4_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample5_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample6_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample7_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample8_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/samples/sample9_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest-all.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest-death-test.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest-filepath.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest-internal-inl.h
        third_party/leveldb/third_party/googletest/googletest/src/gtest-matchers.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest-port.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest-printers.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest-test-part.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest-typed-test.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest.cc
        third_party/leveldb/third_party/googletest/googletest/src/gtest_main.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-break-on-failure-unittest_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-catch-exceptions-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-color-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-death-test-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-death-test_ex_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-env-var-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-failfast-unittest_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-filepath-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-filter-unittest_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-global-environment-unittest_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-list-tests-unittest_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-listener-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-message-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-options-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-output-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-param-test-invalid-name1-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-param-test-invalid-name2-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-param-test-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-param-test-test.h
        third_party/leveldb/third_party/googletest/googletest/test/googletest-param-test2-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-port-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-printers-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-setuptestsuite-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-shuffle-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-test-part-test.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-throw-on-failure-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/googletest-uninitialized-test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest-typed-test2_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest-typed-test_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest-typed-test_test.h
        third_party/leveldb/third_party/googletest/googletest/test/gtest-unittest-api_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_all_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_assert_by_exception_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_environment_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_help_test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_list_output_unittest_.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_main_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_no_test_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_pred_impl_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_premature_exit_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_prod_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_repeat_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_skip_in_environment_setup_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_skip_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_sole_header_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_stress_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_test_macro_stack_footprint_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_testbridge_test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_throw_on_failure_ex_test.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_unittest.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_xml_outfile1_test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_xml_outfile2_test_.cc
        third_party/leveldb/third_party/googletest/googletest/test/gtest_xml_output_unittest_.cc
        third_party/leveldb/third_party/googletest/googletest/test/production.cc
        third_party/leveldb/third_party/googletest/googletest/test/production.h
        third_party/leveldb/util/arena.cc
        third_party/leveldb/util/arena.h
        third_party/leveldb/util/arena_test.cc
        third_party/leveldb/util/bloom.cc
        third_party/leveldb/util/bloom_test.cc
        third_party/leveldb/util/cache.cc
        third_party/leveldb/util/cache_test.cc
        third_party/leveldb/util/coding.cc
        third_party/leveldb/util/coding.h
        third_party/leveldb/util/coding_test.cc
        third_party/leveldb/util/comparator.cc
        third_party/leveldb/util/crc32c.cc
        third_party/leveldb/util/crc32c.h
        third_party/leveldb/util/crc32c_test.cc
        third_party/leveldb/util/env.cc
        third_party/leveldb/util/env_posix.cc
        third_party/leveldb/util/env_posix_test.cc
        third_party/leveldb/util/env_posix_test_helper.h
        third_party/leveldb/util/env_test.cc
        third_party/leveldb/util/env_windows.cc
        third_party/leveldb/util/env_windows_test.cc
        third_party/leveldb/util/env_windows_test_helper.h
        third_party/leveldb/util/filter_policy.cc
        third_party/leveldb/util/hash.cc
        third_party/leveldb/util/hash.h
        third_party/leveldb/util/hash_test.cc
        third_party/leveldb/util/histogram.cc
        third_party/leveldb/util/histogram.h
        third_party/leveldb/util/logging.cc
        third_party/leveldb/util/logging.h
        third_party/leveldb/util/logging_test.cc
        third_party/leveldb/util/mutexlock.h
        third_party/leveldb/util/no_destructor.h
        third_party/leveldb/util/no_destructor_test.cc
        third_party/leveldb/util/options.cc
        third_party/leveldb/util/posix_logger.h
        third_party/leveldb/util/random.h
        third_party/leveldb/util/status.cc
        third_party/leveldb/util/status_test.cc
        third_party/leveldb/util/testutil.cc
        third_party/leveldb/util/testutil.h
        third_party/leveldb/util/windows_logger.h)
